fix: SpriteBox info toggle on iOS fix: Search field aligned to left title on Safari edit: move paging stats to the right new: eboy color “darkflatgreen” new: all whitespace is removed from search fix: hover and active on logo

--- a/client/style.less
+++ b/client/style.less
@@ -54,41 +54,31 @@ body {
 	font-size: 24pt;
 	.dblogo {
 		font-weight: bold;
-	}
-	a {
-		text-decoration: none;
-		color: @almostBlack;
+		color: inherit;
 	}
 	.headline{
 		font-family: inherit;
 		font-size: inherit;
-		-webkit-flex-grow: 1;
-		flex-grow: 1;
-		.dblogo:hover {
-			color: @almostBlack;
-			background-color: @highlight;
-			padding: 0 6px;
-			margin: 0 -6px;
-		}
-		.dblogo:active {
-			color: @highlight;
-			background-color: @almostBlack;
-		}
-		.dblogo:visited {
-			color: @almostBlack;
+		-webkit-flex-grow: 1.2;
+		flex-grow: 1.2;
+		height: 1em;
+		a {
+			text-decoration: none;
 		}
 	}
 	.search {
 		padding: 0px;
 		border: 0px;
+		margin: 0px;
 		-webkit-align-self: flex-end;
 		align-self: flex-end;
 		input[type=text]{
+			height: 1.2em;
 			color: @almostBlack;
 			font-weight: bold;
 			font-family: inherit;
 			font-size: inherit;
-			padding: 0px 6px;
+			padding: 0px 0px;
 			border: 0px;
 			text-align: right;
 		}
@@ -332,9 +322,6 @@ body {
 		opacity: 1;
 		cursor: pointer;
 	}
-	a {
-		color: #aaa;
-	}
 	.editMeta {
 		font-size: 18px;
 		padding: 12px;
@@ -370,14 +357,18 @@ body {
 	padding: 12px;
 }
 
-.previous:hover, .next:hover {
+.previous:hover, .next:hover, .dblogo:hover{
 	color: @editorBackColor;
 	background-color: @highlight; //#c1c7c7
-	padding: 3px 6px;
-	margin: -3px -6px;
+	padding: 2px 4px;
+	margin: -2px -4px;
 }
 
-.previous:active, .next:active {
+.previous:active, .next:active, .dblogo:active{
 	color: @highlight;
 	background-color: @editorBackColor;
+}
+
+.pagestats {
+	float: right;
 }
